--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content" data-aos="fade-up">
-            <img src="profil.jpg" alt="Mushawwir" class="profile-img">
+            <img src="https://raw.githubusercontent.com/Redfox2704/Redfox2704.github.io/refs/heads/main/profil.JPG" alt="Mushawwir" class="profile-img">
             <h1>Mushawwir</h1>
             <p>IT Support Professional</p>
             <p class="birth-date">27 April 2000</p>
