--- a/index.html
+++ b/index.html
@@ -162,16 +162,11 @@
         <div class="container" data-aos="fade-up">
             <h2>Pengalaman Kerja</h2>
             <div class="experience-item">
-                <h3>Teknisi - Cyber Computer</h3>
-                <p class="duration">5 Tahun</p>
+                <h3>IT Support Departement - CV IT Cyber Project</h3>
+                <p class="duration">07 Agustus 2018 – 21 Oktober 2021</p>
                 <p>Bertanggung jawab dalam maintenance dan perbaikan perangkat komputer, instalasi sistem operasi, dan pemecahan masalah teknis.</p>
             </div>
-            <div class="experience-item">
-                <h3>Asisten Tutor - TKJ CLUB</h3>
-                <p class="duration">1 Tahun</p>
-                <p>Membantu dalam pengajaran dan pelatihan siswa dalam bidang Teknik Komputer Jaringan.</p>
-            </div>
-        </div>
+           </div>
     </section>
 
     <!-- Contact Section -->
