--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content" data-aos="fade-up">
-            <img src="profil.JPG" alt="Mushawwir" class="profile-img">
+            <img src="3x4.JPG" alt="Mushawwir" class="profile-img">
             <h1>Mushawwir</h1>
             <p>IT Support Professional</p>
             <p class="birth-date">27 April 2000</p>
@@ -206,3 +206,4 @@
     <script src="script.js"></script>
 </body>
 </html> 
+
